fix: update final view style
Update the style for the FinalView so that names are not overflowing off of the page for the average screen height and increases the padding for the numbers in the numbered list so large numbers are not overflowing.

--- a/src/components/FinalView/FinalView.scss
+++ b/src/components/FinalView/FinalView.scss
@@ -22,8 +22,9 @@
       font-size: 30px;
       font-weight: 900;
       color: #2196F3;
-      max-height: 300px;
+      max-height: 280px;
       overflow-y: auto;
+      padding-left: 150px;
 
       li {
         text-align: left;
